--- a/index.html
+++ b/index.html
@@ -27,12 +27,14 @@
             <div class="contactSection__main">
 
                 <ul class="contactList">                    
-                    <li class="contactList__empty">
-                        <h3 class="contactList__text">
-                           You don´t have contacts yet, add some
-                        </h3>
-                    </li>
+                
                 </ul>
+
+                <div class="contactList__empty">
+                    <h3 class="contactList__text">
+                        You don´t have contacts yet, add some
+                     </h3>
+                </div>
             </div>
         </section>
 
@@ -52,17 +54,17 @@
             <div class="contactForm__main">
                 <div class="contactForm__element">
                     <label class="contactForm__label" for="contactForm__fullName">Name</label>
-                    <input type="text" class="contactForm__input contactForm__fullName" name="contactForm__fullName"  placeholder="Jhon Doe">
+                    <input type="text" class="contactForm__input contactForm__fullName" name="contactForm__fullName"  placeholder="Jhon Doe" >
                     <div class="contactForm__message contactForm__fullNameMessage"></div>
                 </div>
                 <div class="contactForm__element">
                     <label class="contactForm__label" for="contactForm__phone">Phone</label>
-                    <input type="text" class="contactForm__input contactForm__phone" name="contactForm__phone" placeholder="04125841684">
+                    <input type="text" class="contactForm__input contactForm__phone" name="contactForm__phone" placeholder="04125841684" pattern="/^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$/im">
                     <div class="contactForm__message contactForm__phoneMessage"></div>
                 </div>
                 <div class="contactForm__element">
                     <label class="contactForm__label" for="contactForm__email">Email</label>
-                    <input type="text" class="contactForm__input contactForm__email" name="contactForm__email" placeholder="mail@mail.com">
+                    <input type="text" class="contactForm__input contactForm__email" name="contactForm__email" placeholder="mail@mail.com" >
                     <div class="contactForm__message contactForm__emailMessage"></div>
                 </div>
                 <div  class="contactForm__element contactForm__actions">
