fixing form validations

--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
                 </div>
                 <div class="contactForm__element">
                     <label class="contactForm__label" for="contactForm__phone">Phone</label>
-                    <input type="text" class="contactForm__input contactForm__phone" name="contactForm__phone" placeholder="04125841684" pattern="/^[\+]?[(]?[0-9]{3}[)]?[-\s\.]?[0-9]{3}[-\s\.]?[0-9]{4,6}$/im">
+                    <input type="text" class="contactForm__input contactForm__phone" name="contactForm__phone" placeholder="04125841684" minlength="10" maxlength="12">
                     <div class="contactForm__message contactForm__phoneMessage"></div>
                 </div>
                 <div class="contactForm__element">
